0.5.4 (21-May-2013)
* Fix Atom feed by adding a `link` field.
* Install `.mli` files with the library binaries (#11).
* New dependency on the `Uri` library.

0.5.3 (18-Feb-2013):
* Correct META file for `cow.syntax` to not repeat the `Str` module loading.
* Fix error with unary sum types for HTML generation.
* Support JSON marshalling for `option` types.

0.5.2 (15-Jan-2013):
* Remove dependency towards the Str module

0.5.1 (10-Jan-2013):
* Fix bugs in `Markdown_github` and factorize html serialization functions
* New antiquotation kinds for CSS
* Add xhtml quotations (which are identical to html from now on)

0.5.0 (04-Dec-2012):
* Remove the broken `Twitter` module
* Add `Markdown_github` to read Github's markdown files

0.4.0 (05-Oct-2012):
* Support (and require) type_conv-108.07.00+

0.3.2 (11-Sep-2012):
* Add `<:html<` quotation, based on the XML generator,
  but with all the XHTML entities also supplied.

0.3.1 (04-Sep-2012):
* Fix the OCamlfind META file.

0.3.0 (02-Sep-2012):
* Initial public release.